# drift-detector-mnist

./: .env.sample  Dockerfile  JenkinsConstants.groovy  LICENSE  README.md  metadata.json  pyproject.toml  requirements.txt  tox.ini
.sqa/: config.yml  dockerfile
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
detector/: __init__.py  config.py  make_autoencoder.py  make_dataset.py  make_detector.py  utils.py
detector/models/: __init__.py  autoencoder.py
docs/: Makefile  conf.py  index.rst  make.bat
drift_detector_mnist/: README.md  __init__.py  config.py  make_autoencoder.py  make_dataset.py  make_detector.py  utils.py
drift_detector_mnist/models/: __init__.py
notebooks/: 1.0-drift_detector_mnist_start.ipynb
tests/: README.md  conftest.py
tests/data/: test_images.npy  test_ones.npy
tests/test_metadata/: test_requirements.py
tests/test_predictions/: conftest.py  test_requirements.py
