[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "drift-detector-mnist"
authors = [
    { name = "Borja Esteban", email = "boressan@outlook.com" },
]
description = "Drift Detector for MNIST images with Frouros"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/drift-detector-mnist"
"Bug Tracker" = "https://github.com/ai4os-hub/drift-detector-mnist/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "DRIFT_DETECTOR_MNIST_DATA_PATH=tests/data",
    "DRIFT_DETECTOR_MNIST_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [
    "drift_detector_mnist",
    "drift_detector_mnist.api",
]

[tool.setuptools.package-dir]
"drift_detector_mnist.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
drift_detector_mnist = "drift_detector_mnist.api"
